--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 	<!-- SOUND WHEN TYPEING -->
 	<audio>
-		<source src="sound/typewriter.mp3" type="audio/mpeg">
+		<source src="./sound/typewriter.mp3" type="audio/mpeg">
 	</audio>
 	<!-- END SOUND WHEN TYPEING -->
 	<script src="js/app.js"></script>
